--- a/netlify.toml
+++ b/netlify.toml
@@ -8,21 +8,20 @@
   # Next.js output directory
   publish = ".next"
 
-  # Use Node 20 (specified in .nvmrc as well)
-  environment = { NODE_VERSION = "20" }
-
-# Next.js Runtime Plugin
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-
-# Environment variable configuration
-# Set these in Netlify dashboard: Site settings > Environment variables
+# Build environment variables
 [build.environment]
+  # Use Node 20 (specified in .nvmrc as well)
+  NODE_VERSION = "20"
+
   # Prisma needs to generate client during build
   PRISMA_GENERATE_SKIP_AUTOINSTALL = "false"
 
   # Next.js optimizations
   NEXT_TELEMETRY_DISABLED = "1"
+
+# Next.js Runtime Plugin
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 # Redirect rules (optional - adjust as needed)
 [[redirects]]
