--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.17.10",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.18",
