Fix API routes by removing conflicting redirect rule
- Remove manual /api/* redirect that conflicts with @netlify/plugin-nextjs
- The Next.js plugin automatically handles API route deployment
- Fixes 404 errors on all API endpoints

The manual redirect was preventing the plugin from properly
deploying API routes as Netlify serverless functions.

--- a/netlify.toml
+++ b/netlify.toml
@@ -20,14 +20,9 @@
   NEXT_TELEMETRY_DISABLED = "1"
 
 # Next.js Runtime Plugin
+# This plugin automatically handles API routes and server-side rendering
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-
-# Redirect rules (optional - adjust as needed)
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
 
 # Headers for security (optional but recommended)
 [[headers]]
